# snake_game

./: Cargo.toml  README.md  cobertura.xml  sonar-project.properties
.github/workflows/: dco.yml
.scannerwork/: report-task.txt
src/: draw.rs  game.rs  main.rs  snake.rs
